force-app/main/default/objects/Tableau_SalesOrg__c/Tableau_SalesOrg__c.object-meta.xml
<CustomObject>
    <label>Tableau_SalesOrg</label>
    <nameField>
        <displayFormat>TSOrg-{0000000}</displayFormat>
        <label>Auto-Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tableau_SalesOrgs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>