force-app/main/default/objects/Tableau_SalesOrg__c/fields/SalesOrg2__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg2__c</fullName>
    <label>Sales_Org_2</label>
    <type>TextArea</type>
</CustomField>