force-app/main/default/objects/Tableau_SalesOrg__c/fields/SalesOrgID__c.field-meta.xml
<CustomField>
    <fullName>SalesOrgID__c</fullName>
    <label>SalesOrgID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>