force-app/main/default/objects/Tableau_SalesOrg__c/fields/SalesOrgName__c.field-meta.xml
<CustomField>
    <fullName>SalesOrgName__c</fullName>
    <label>SalesOrgName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>